fix: support JMX collection on Java 8