@@ -2,10 +2,11 @@ package com.acme.hdfsperf.jmx;
 
 import com.acme.hdfsperf.cli.Arguments;
 
-import java.net.URI;
-import java.net.http.*;
+import java.io.ByteArrayOutputStream;
+import java.io.InputStream;
+import java.net.HttpURLConnection;
+import java.net.URL;
 import java.nio.charset.StandardCharsets;
-import java.time.Duration;
 import java.util.*;
 import java.util.concurrent.*;
 
@@ -16,17 +17,18 @@ public final class JmxCollector implements AutoCloseable {
         "retrycache", "snapshotinfo", "startup", "pausemonitor");
 
     private final List<String> endpoints = new ArrayList<>();
-    private final HttpClient client;
     private final ExecutorService pool;
-    private final Duration timeout;
+    private final int timeoutMillis;
     private final String authorization;
 
     public JmxCollector(Arguments args) {
         endpoints.addAll(args.csv("nn-jmx"));
         endpoints.addAll(args.csv("dn-jmx"));
-        timeout = Duration.ofMillis(args.getInt("jmx-timeout-ms", 5000));
+        timeoutMillis = args.getInt("jmx-timeout-ms", 5000);
+        if (timeoutMillis < 100 || timeoutMillis > 300000) {
+            throw new IllegalArgumentException("--jmx-timeout-ms 范围为 100..300000");
+        }
         pool = Executors.newFixedThreadPool(Math.max(1, Math.min(8, endpoints.size())));
-        client = HttpClient.newBuilder().connectTimeout(timeout).executor(pool).build();
         String user = args.get("jmx-user");
         String password = System.getenv("HDFS_PERF_JMX_PASSWORD");
         authorization = user == null ? null : "Basic " + Base64.getEncoder().encodeToString(
@@ -42,7 +44,7 @@ public final class JmxCollector implements AutoCloseable {
             tasks.add(CompletableFuture.runAsync(() -> captureOne(endpoint, snapshot), pool));
         }
         for (CompletableFuture<Void> task : tasks) {
-            try { task.get(timeout.toMillis() + 1000, TimeUnit.MILLISECONDS); }
+            try { task.get(timeoutMillis + 1000L, TimeUnit.MILLISECONDS); }
             catch (Exception e) { synchronized (snapshot.errors) { snapshot.errors.add("JMX 采集任务失败: " + rootMessage(e)); } }
         }
         return snapshot;
@@ -51,13 +53,27 @@ public final class JmxCollector implements AutoCloseable {
     @SuppressWarnings("unchecked")
     private void captureOne(String endpoint, JmxSnapshot snapshot) {
         String normalized = normalize(endpoint);
+        HttpURLConnection connection = null;
         try {
-            HttpRequest.Builder builder = HttpRequest.newBuilder(URI.create(normalized)).timeout(timeout).GET()
-                .header("Accept", "application/json").header("User-Agent", "hdfs-perf-inspector/1.0");
-            if (authorization != null) builder.header("Authorization", authorization);
-            HttpResponse<String> response = client.send(builder.build(), HttpResponse.BodyHandlers.ofString(StandardCharsets.UTF_8));
-            if (response.statusCode() / 100 != 2) throw new IllegalStateException("HTTP " + response.statusCode());
-            Object parsed = MiniJson.parse(response.body());
+            connection = (HttpURLConnection) new URL(normalized).openConnection();
+            connection.setRequestMethod("GET");
+            connection.setConnectTimeout(timeoutMillis);
+            connection.setReadTimeout(timeoutMillis);
+            connection.setRequestProperty("Accept", "application/json");
+            connection.setRequestProperty("User-Agent", "hdfs-perf-inspector/0.1.0");
+            if (authorization != null) connection.setRequestProperty("Authorization", authorization);
+            int status = connection.getResponseCode();
+            if (status / 100 != 2) throw new IllegalStateException("HTTP " + status);
+            String body;
+            try (InputStream input = connection.getInputStream(); ByteArrayOutputStream output = new ByteArrayOutputStream()) {
+                byte[] buffer = new byte[8192];
+                int read;
+                while ((read = input.read(buffer)) >= 0) {
+                    if (read > 0) output.write(buffer, 0, read);
+                }
+                body = new String(output.toByteArray(), StandardCharsets.UTF_8);
+            }
+            Object parsed = MiniJson.parse(body);
             if (!(parsed instanceof Map)) throw new IllegalArgumentException("JMX 响应不是 JSON 对象");
             Object beanValue = ((Map<String, Object>) parsed).get("beans");
             if (!(beanValue instanceof List)) throw new IllegalArgumentException("JMX 响应缺少 beans 数组");
@@ -76,6 +92,8 @@ public final class JmxCollector implements AutoCloseable {
             synchronized (snapshot.endpoints) { snapshot.endpoints.put(normalized, metrics); }
         } catch (Exception e) {
             synchronized (snapshot.errors) { snapshot.errors.add(normalized + ": " + rootMessage(e)); }
+        } finally {
+            if (connection != null) connection.disconnect();
         }
     }
 
